--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Millennia Chat
+logo: /images/millennia_logo.png
 description: VCFMW AIM Server - Powered by Retro AIM Server
