update default.html with attributions

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: 
+title: VCFMW AIM Server
 theme: jekyll-theme-minimal
 logo: /images/millennia_logo.png
 description: VCFMW AIM Server - Powered by Retro AIM Server
